--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,22 +14,22 @@ jobs:
 
     strategy:
       matrix:
-        container_engine: [docker, podman]
+        build_command: [docker, podman, buildah]
     steps:
     - uses: actions/checkout@v3
     - name: Build the image with label
-      run: ${{ matrix.container_engine }} build . --file Dockerfile --label somefancylabel=true --tag my-image-name:${{ matrix.container_engine }}-label
+      run: ${{ matrix.build_command }} build --file Dockerfile --label somefancylabel=true --tag my-image-name:${{ matrix.build_command }}-label .
     - name: test label exists
       run: |
-          if ! ${{ matrix.container_engine }} inspect my-image-name:${{ matrix.container_engine }}-label | grep -q 'somefancylabel'; then
+          if ! ${{ matrix.build_command }} inspect my-image-name:${{ matrix.build_command }}-label | grep -q 'somefancylabel'; then
             echo "label doesn't exist!"
             exit 1
           fi
     - name: Build the image without label
-      run: ${{ matrix.container_engine }} build . --file Dockerfile --tag my-image-name:${{ matrix.container_engine }}-nolabel
+      run: ${{ matrix.build_command }} build --file Dockerfile --tag my-image-name:${{ matrix.build_command }}-nolabel .
     - name: test label exists
       run: |
-          if ${{ matrix.container_engine }} inspect my-image-name:${{ matrix.container_engine }}-nolabel | grep -q 'somefancylabel'; then
+          if ${{ matrix.build_command }} inspect my-image-name:${{ matrix.build_command }}-nolabel | grep -q 'somefancylabel'; then
             echo "label shouldn't exist!"
             exit 1
           fi
